vs-jwt-httpbin.yaml
apiVersion: networking.istio.io/v1    
kind: VirtualService                  
metadata:                             
  name: httpbin                       
  namespace: jwt-test 
spec:                                 
  hosts:                              
  - "*"                               
  gateways:                           
  - httpbin-gateway                   
  http:                               
  - match:                            
    - uri:                            
        prefix: /headers              
      headers:                        
        "@request.auth.claims.groups":
          exact: group1               
    route:                            
    - destination:                    
        port:                         
          number: 8000                
        host: httpbin
